After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 720609 - Sometimes closes tabs which were not used just for the download
Sometimes closes tabs which were not used just for the download
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: Downloads
unspecified
Other All
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-12-17 15:38 UTC by Gustavo Noronha (kov)
Modified: 2013-12-18 13:53 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Use a flag to decide if a tab is download-only (2.81 KB, patch)
2013-12-17 15:38 UTC, Gustavo Noronha (kov)
committed Details | Review

Description Gustavo Noronha (kov) 2013-12-17 15:38:26 UTC
How to reproduce:

* start epiphany
* go to http://webkitgtk.org/
* middle click the page title so you get a new tab on the same page
* on that new tab click one of the links to the release tarballs on the right side

You will notice the new tab is closed, but it should not be closed.
Comment 1 Gustavo Noronha (kov) 2013-12-17 15:38:28 UTC
Created attachment 264417 [details] [review]
Use a flag to decide if a tab is download-only

There are some cases in which a view may not be able to go back and still be not
just for a download: if the view has been opened by middle clicking somewhere or
by having an URL provided on startup, then the navigation from the overview to
the first page won't have happened. By tracking whether the page has ever
committed a load we can be sure it has been opened just for the download.
Comment 2 Claudio Saavedra 2013-12-18 12:13:01 UTC
Review of attachment 264417 [details] [review]:

This is cleaner, I think.
Comment 3 Gustavo Noronha (kov) 2013-12-18 13:53:44 UTC
Attachment 264417 [details] pushed as ac9cae2 - Use a flag to decide if a tab is download-only